--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Unique Integer Choice Game</title>
+    <title>placeholder</title>
     <style>
         /**
          * matcha.css — 3.0.0
@@ -24,23 +24,30 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js"></script>
 </head>
 <body style="padding-bottom: 30px">
-<h1>Unique Integer Choice Game</h1>
+<h1>placeholder</h1>
 <h2>Explanation of the Task</h2>
 <p>
-    So the game is the following: You're in a pool of $n$ players. Also given are $k, w \in \Bbb Z^+$. You know $n$, $k$ and $w$.
-    Each turn you submit an integer $i$ where $1 \le i \le k$.
-    If you're the only one who submitted this integer then you get $i$ points added to your score $s$. Which starts at $0$.
-</p>
-<p>
-    If $s \equiv 0 \pmod w \land s\not=0$ you've won.
-</p>
-<p>
-    After each turn you're told about the turns of all the other people.
+    <p>
+    So the game is the following: You're in a pool of $3 \le n \le 5$ players and have $15$ cards ranging from $1$ to $15$.
+    Each turn one auction card is put in the middle, which has a value between $-5$ and $10$ (excluding $0$),
+    and you submit an integer $i$ where $1 \le i \le 15$, i.e. one of your cards. 
+    This card is then discarded, so you can't use it later on anymore. 
+    </p>
+    <p>
+    The person who wins the card gets its value added to his score. If the value of the auction card is positive, the 
+    person who submitted the highest unique number, i.e. the highest number no one else submitted. If its value is negative, the person who submitted the
+    least unique number gets it. There is an exception if no one submitted a unique number. In this case, the card 
+    stays in the middle and in the next round, the players compete for both cards together, so the sum of their values. (This continues if necessary.)
+    </p>
+    <p>
+    The game ends after $15$ turns, when all the players have no more cards left. Then, each player receives his score for this game.
+    The players now play repeatedly against each other, and the player who has the largest total score wins.
+    </p>
 </p>
 <h2>Explanation of the input and output format.</h2>
 <p>
-    At the beginning of a new game your program is executed as a new process. Meaning you can't remember previous games.
-    But indeed you can remember the previous rounds in the current game you're playing.
+    At the beginning of each new game your program is executed as a new process, meaning you can't remember previous games.
+    But you can instead remember the previous rounds in the current game you're playing.
 </p>
 <p>
     All the input you get by <code>stdin</code>.
@@ -49,47 +56,59 @@
     This means for example you can output using <code>cout</code> in C++ and using <code>print</code> or <code>printf</code> in python.
 </p>
 <p>
-    As input initially it's send the number $n$, $k$, $w$ and $j$ where $n$, $k$ and $w$ are as before and $j$ is your position in the pool of players.
+    As input initially it's the number $n$ and $j$ where $n$ is the number of players and $j$ is your position in the pool of players
+    (index starting at $0$).
     This is done in the following format followed by a linebreak (<code>"\n"</code>):
-    <br><code>n k w j</code><br>
-    For example if $n=10$ (so there are $10$ players), $k=5$ (meaning you can choose your numbers between $1$ and $5$),
-    $w=50$ (you win with a score equal to a multiple of $50$) and you're number is $7$ the input looks like this:
-    <br><code>10 5 50 7</code><br>
+    <br><code>n j</code><br>
+    For example if $n=5$ (so there are $5$ players), and you're number is $j=43 the input looks like this:
+    <br><code>5 3</code><br>
 </p>
 <p>
-    Then your program has to decide the first number it submits.
-    If you're output is not an integer between $1$ and $k$ then you're immediately disqualified.
-    <b>IMPORTANT:</b> You have to end your output with a linebreak (<code>"\n"</code>).
+    First of all, you are given as input the sum of the values $s$ of all the auction cards in the middle. Because cards can remain in the middle,
+    you won't necessarily just get the numbers $-5, \ldots , -1 ,1, \ldots, 10$ in some order, you could also get $12$ or $4$ twice, 
+    so watch out for this. The input simply looks like this:
+    <br> <code> s </code> <br>
+    Then, your program has to decide the first number to submit. Note that your strategy depends on the sign of $s$.
+    If your output is not an integer between $1$ and $15$, you're immediately disqualified.
+    <b>IMPORTANT:</b> You also have to end your output with a linebreak (<code>"\n"</code>).
 </p>
 <p>
     Now you get all the submissions $i_0, ..., i_j, ... i_{n-1}$ that were done by you and the other players.
-    Where $i_x$ is the number submitted by the $x$-th player. So $i_j$ is the number you submitted.
+    Where $i_k$ is the number submitted by the $k$-th player, so $i_k$ is the number you submitted.
     Your code gets them in the following format:
     <br><code>i_0 i_1 ... i_j ... i_(n-1)</code>
 </p>
 <p>
-    As an example: There are 4 players. The first/$0$-th player submits $1$, the second/$1$-th player submits $3$, the next one submits $1$ and the last one submits $2$.
-    <br><code>1 3 1 2</code><br>
-    (In this case the second/$1$-th player gets $3$ points and the last one gets $2$ points)
+    As an example: There are 4 players. In the first round, the auction card has value $s=6$, the first player (index $0$) submits $14$, 
+    ,the second player (index $1$) submits $12$, the next one submits $14$ and the last one submits $8$.
+    <br><code>14 12 14 8</code><br>
+    (In this case the second player gets the auction card since $s>0$ and he submitted the highest unique number.)
 </p>
 <p>
-    Then again you have to submit a new number and . From here on it just repeats.
+    Then, you again receive the sum of the values of the auction cards in the middle as input, and your program has to submit a new number,
+    but it may not submit one it previously submitted.
 </p>
 <p>
     As an example for a whole game. Here the "conversation" between <span style="color:magenta">your program</span> and <span style="color:green">the game</span>:
-    <br><code style="color:green">10 5 20 7</code>
+    <br><code style="color:green">5 1</code>
 
-    <br><code style="color:magenta">5</code>
+    <br><code style="color:green">8 </code>
 
-    <br><code style="color:green">5 2 4 4 2 1 3 5 4 5</code>
+    <br><code style="color:magenta">14</code>
 
-    <br><code style="color:magenta">5</code>
+    <br><code style="color:green">4 14 7 12 9</code>
 
-    <br><code style="color:green">3 4 5 1 3 2 3 5 1 2</code>
+    <br><code style="color:green">-4</code>
+    
+    <br><code style="color:magenta">1</code>
 
-    <br><code style="color:magenta">3</code>
+    <br><code style="color:green">1 1 2 3 2</code>
 
-    <br><code style="color:green">3 2 5 4 1 4 3 3 1 2</code>
+    <br><code style="color:green">4</code>
+
+    <br><code style="color:magenta">8</code>
+
+    <br><code style="color:green">15 8 9 5 15</code>
 
     <br><code>...</code>
 </p>
