--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     but it may not submit one it previously submitted (since these cards are gone).
 </p>
 <p>
-    As an example for a whole game. Here the "conversation" between <span style="color:magenta">your program</span> and <span style="color:green">the game</span>:
+    Now an example for the start of a game. Here's the "conversation" between <span style="color:magenta">your program</span> and <span style="color:green">the game</span>:
     <br><code style="color:green">5 1</code>
 
     <br><code style="color:green">8 </code>
