replaced the current placeholder name by "Unique Auction Card Game"

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>placeholder</title>
+    <title>Unique Auction Card Game</title>
     <style>
         /**
          * matcha.css — 3.0.0
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js"></script>
 </head>
 <body style="padding-bottom: 30px">
-<h1>placeholder</h1>
+<h1>Unique Auction Card Game</h1>
 <h2>Explanation of the Task</h2>
 <p>
     <p>
@@ -270,7 +270,7 @@ int main(){
     <input type="submit" value="Submit">
 </div></form>
 <h2>Live Arena</h2>
-<a href="/randomGameDisplay">Here</a> you can watch random games illustrated on a blackboard.
+<a href="/randomGameDisplay">Here</a> you can watch random games illustrated on a beautiful ui.
 </body>
 
 
