--- a/preset.html
+++ b/preset.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Unique Integer Choice Game</title>
+    <title>Unique Auction Card Game</title>
     <style>
         /**
          * matcha.css — 3.0.0
@@ -24,4 +24,4 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js"></script>
 </head>
 <body>
-<h1>Unique Integer Choice Game</h1>
+<h1>Unique Auction Card Game</h1>
