--- a/html/random-game.html
+++ b/html/random-game.html
@@ -26,7 +26,7 @@
 <body>
 <h1>Unique Auction Card Game</h1>
 <h2>Random Game Display</h2>
-<canvas id="cv" width="1000" height="500" style="width: 100%"><img id="bg" src="/background.jpeg"  alt="Ein wunderschöner Holztisch"></canvas>
+<canvas id="cv" width="1000" height="500" style="width: 100%"><img id="bg" src="/assets/background.jpeg" alt="Ein wunderschöner Holztisch"></canvas>
 <br><a href='/'><button>Return to start page</button></a>
 <script>
 const url = "/randomGame";
